# SDL2ImGui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  make_data.bat  make_data.py  pack_run.bat
data/: App.ini
docs/: UML.drawio  UML.uxf
include/: AIControl.hpp  AnimatedSprite.hpp  AppSettings.hpp  Application.hpp  AtlassedSpriteBase.hpp  AtlassedSpriteBase.inl  AtlassedSpriteU.hpp  BaseControl.hpp  Bomb.hpp  BombLogic.hpp  GameApp.hpp  IDrawable.hpp  KeyboardControl.hpp  Learn.hpp  PearsonHash.hpp  PlayGround.hpp  Player.hpp  PlayerControl.hpp  PlayerSprite.hpp  SDL_Wrapper.hpp  Singleton.hpp  Sprite.hpp  SpriteAnimator.hpp  TextureAtlasBase.hpp  TextureAtlasBase.inl  TextureAtlasU.hpp  TileEntry.hpp  TileEntry.inl  TimerHR.hpp  Vector2D.hpp  Window.hpp  WrapperHelpers.hpp
prj/: CMakeLists.txt  SDL2ImGui.sln  SDL2ImGui.vcxproj  SDL2ImGui.vcxproj.filters
src/: AIControl.cpp  AnimatedSprite.cpp  AppSettings.cpp  Application.cpp  AtlassedSpriteBase.cpp  AtlassedSpriteU.cpp  BaseControl.cpp  Bomb.cpp  BombLogic.cpp  GameApp.cpp  KeyboardControl.cpp  Main.cpp  PearsonHash.cpp  PlayGround.cpp  Player.cpp  PlayerControl.cpp  PlayerSprite.cpp  Sprite.cpp  SpriteAnimator.cpp  TextureAtlasBase.cpp  TextureAtlasU.cpp  TileEntry.cpp  TimerHR.cpp  Window.cpp
